K8/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: UserEmail,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,x-source,authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "720"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: tbr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: substitute_host
    http:
      paths:
      - backend:
          service:
            name: tbr-backend-api-svc
            port:
              number: 3000
        path: /api/?(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: tbr-web-svc
            port:
              number: 3000
        path: /?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - substitute_host
    secretName: substitute_secretname
